--- a/base-js-meta-memory/package.json
+++ b/base-js-meta-memory/package.json
@@ -14,6 +14,7 @@
     "@builderbot/bot": "1.2.4",
     "@builderbot/provider-meta": "1.2.4",
     "@google/generative-ai": "^0.21.0",
+    "axios": "^1.7.9",
     "chrono-node": "^2.7.7",
     "googleapis": "^144.0.0",
     "luxon": "^3.5.0"
